# seismic_facies_3d

./: LICENSE  README.md  pyproject.toml
notebooks/: 01_eda.ipynb
