[tool.poetry]
name = "seismic_facies_3d"
version = "0.1.0"
description = ""
authors = ["Altay Sansal <tasansal@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9 <3.11"
tensorflow = {version = "^2.8.0", markers = "sys_platform == 'win32'"}
tensorflow-macos = {version = "^2.8.0", markers = "sys_platform == 'darwin'"}
tensorflow-metal = {version = "^0.4.0", markers = "sys_platform == 'darwin'"}
jupyterlab = "^3.2.9"
matplotlib = "^3.5.1"
ipympl = "^0.8.8"
tensorboard = "^2.8.0"
tensorflow-addons = "^0.16.1"
zarr = "^2.11.0"
isort = "^5.10.1"
black = {version = "^22.1.0", extras = ["jupyter"] }
wheel = "^0.37.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
